--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   # Notifications
   flutter_local_notifications: ^18.0.0
   timezone: ^0.10.0
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
